kubernetes/apps/external-secrets/external-secrets/bitwarden/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-bw-eso-provider
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden-eso-provider
      app.kubernetes.io/name: bitwarden-eso-provider
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
            k8s:io.kubernetes.pod.namespace: external-secrets
